Update workflow and secret access

--- a/.github/workflows/generate-stats.yml
+++ b/.github/workflows/generate-stats.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 0 * * *'
   workflow_dispatch:
 jobs:
-  tweet:
+  Stats:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
