Switch from reference from secrets to environment variables

--- a/.github/workflows/generate-stats.yml
+++ b/.github/workflows/generate-stats.yml
@@ -22,8 +22,18 @@ jobs:
           pip install matplotlib
           pip install requests
       - name: Get Data
+        env:
+          BUFFERSIZE: ${{ secrets.BUFFERSIZE }}
+          ENCRYPTIONPASSWORD: ${{ secrets.ENCRYPTIONPASSWORD }}
+          CLIENTID: ${{ secrets.CLIENTID }}
+          CLIENTSECRET: ${{ secrets.CLIENTSECRET }}
         run: python getData.py
       - name: Process Data
+        env:
+          BUFFERSIZE: ${{ secrets.BUFFERSIZE }}
+          ENCRYPTIONPASSWORD: ${{ secrets.ENCRYPTIONPASSWORD }}
+          CLIENTID: ${{ secrets.CLIENTID }}
+          CLIENTSECRET: ${{ secrets.CLIENTSECRET }}
         run: python processData.py      
       - name: Upload Changes
         run: |
