--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -1,9 +1,8 @@
-name: GenerateStats
+name: CodeTest
 on:
-  schedule:
-    - cron: '0 1-23 * * *'
-    - cron: '0 0 * * *'
   workflow_dispatch:
+  pull_request:
+    branches: [ main ]
 jobs:
   Stats:
     runs-on: ubuntu-latest
@@ -35,9 +34,3 @@ jobs:
           CLIENTID: ${{ secrets.CLIENTID }}
           CLIENTSECRET: ${{ secrets.CLIENTSECRET }}
         run: python processData.py
-      - name: Upload Changes
-        run: |
-          git config --global user.name 'GithubBot'
-          git remote set-url origin https://x-access-token:${{ secrets.TOKEN_GITHUB }}@github.com/${{ github.repository }}
-          git diff-index --quiet HEAD || git commit --allow-empty -am "Automated changes"
-          git push
