--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
-  Stats:
+  Tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
