--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
+        with: python-version: 3.9 # For now, scipy doesn't appear to work in 3.10
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
